PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Apr 2006, PHP 5.1.3
- Fixed bug #37060 (Type of retval of Countable::count() is not checked). 
  (Johannes)
- FIxed bug #37059 (oci_bind_by_name() doesn't support RAW and LONG RAW 
  fields). (Tony)
- Fixed bug #37057 (xmlrpc_decode() may produce arrays with numeric strings, 
  which are unaccessible). (Tony)
- Fixed bug #37055 (incorrect reference counting for persistent OCI8 
  connections). (Tony)
- Fixed bug #37054 (SoapClient Error Fetching http headers). (Dmitry)
- Fixed bug #37053 (html_errors with internal classes produces wrong links). 
  (Tony)
- Fixed bug #37046 (foreach breaks static scope). (Dmitry)
- Fixed bug #37002 (Have to quote literals in INI when concatenating with
  vars). (Dmitry)

06 Apr 2006, PHP 5.1.3RC3
- Eliminated run-time constant fetching for TRUE, FALSE and NULL. (Dmitry)
- Changed SOAP extension to cache WSDL structure in memory and thus speed up
  SoapClient/SoapServer construction. (Andrei)
- Removed the E_STRICT deprecation notice from "var". (Ilia)
- Added overflow checks to wordwrap() function. (Ilia)
- Added support for BINARY_DOUBLE and BINARY_FLOAT to PDO_OCI and OCI8 
  (also fixes bug #36764). (Tony)
- Fixed tempnam() 2nd parameter to be checked against path components. (Ilia)
- Fixed a bug that would not fill in the fifth argument to preg_replace() 
  properly, if the variable was not declared previously. (Andrei)
- Fixed safe_mode check for source argument of the copy() function. (Ilia)
- Fixed mysqli bigint conversion under Windows (Georg)
- Fixed XSS inside phpinfo() with long inputs. (Ilia)
- Fixed Apache2 SAPIs header handler modifying header strings. (Mike)
- Fixed 'auto_globals_jit' to work together with 'register_argc_argv'. (Dmitry)
- Fixed offset/length parameter validation in substr_compare() function. (Ilia)